--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="file-list"></div>
 
 <script>
-const FILE_LIST_URL = "https://openst.weizhihan3.workers.dev/list/";
+const FILE_LIST_URL = "https://openst.weizhihan3.workers.dev/list";
 
 async function loadFiles() {
   const res = await fetch(FILE_LIST_URL);
@@ -83,4 +83,5 @@ loadFiles();
 </script>
 </body>
 </html>
+
 
