--- a/index.html
+++ b/index.html
@@ -29,39 +29,10 @@
 <script src="scripts/lazyload.js" type="module"></script>
 <script type="module">
     import { initLazyLoad } from './scripts/lazyload.js';
-
-    async function loadFiles() {
-        const res = await fetch('https://openst.weizhihan3.workers.dev/list');
-        const files = await res.json();
-
-        const container = document.getElementById('file-list');
-        container.innerHTML = '';
-
-        files.forEach(file => {
-            if (file.name.endsWith('.png')) return;
-
-            const item = document.createElement('div');
-            item.className = 'file-item';
-
-            const img = document.createElement('img');
-            img.dataset.src = `https://openst.weizhihan3.workers.dev/${file.preview}`;
-            img.width = 300;
-            img.height = 200;
-
-            item.appendChild(img);
-            container.appendChild(item);
-        });
-
-        // DOM 渲染后再挂懒加载
-        initLazyLoad({ container });
-    }
-
-    // 等 DOM 就绪后再启动
-    document.addEventListener("DOMContentLoaded", () => {
-        loadFiles();
-    });
+    initLazyLoad({ container: document.getElementById('file-list') });
 </script>
 </body>
 </html>
+
 
 
