--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 </div>
 
 <div id="file-list"></div>
-<div style="height: 200px;"></div>
+<label class="switch">
+    <input type="checkbox" class="ghfast-toggle">
+</label>
+<div style="height: 2000px;"></div>
 
 <script src="scripts/main.js" type="module"></script>
 <script src="scripts/lazyload.js" type="module"></script>
@@ -33,6 +36,3 @@
 </script>
 </body>
 </html>
-
-
-
