--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OpenST 投影仓库</title>
+    <title>OpenST 档案馆</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.png">
 </head>
@@ -13,7 +13,7 @@
 <header class="topbar">
     <div class="logo-container">
         <img src="favicon.png" alt="OpenST" class="logo">
-        <span class="site-title">投影仓库</span>
+        <span class="site-title">档案馆</span>
     </div>
     <nav class="top-nav">
         <a href="https://github.com/MC-OpenST/storage-schematic-archive-2.0" target="_blank">Github</a>
