--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <span class="site-title">档案馆</span>
     </div>
     <nav class="top-nav">
-        <a href="https://github.com/MC-OpenST/storage-schematic-archive-2.0" target="_blank">Github</a>
-        <a href="https://qun.qq.com/universal-share/share?ac=1&authKey=..." target="_blank">QQ群</a>
-        <a href="https://discord.gg/6MSCN6JanU" target="_blank">Discord</a>
+        <a href="https://github.com/MC-OpenST/storage-schematic-archive-2.0" target="_blank"><img src="photos/svg/github-mark-white.svg" alt="github"></a>
+        <a href="https://qm.qq.com/q/5Qxjedq72o" target="_blank"><img src="photos/svg/qq-svgrepo-com.svg" alt="QQ"></a>
+        <a href="https://discord.gg/6MSCN6JanU" target="_blank"><img src="photos/svg/discord-svgrepo-com.svg" alt="discord"></a>
     </nav>
 </header>
 
